update position
